feat: Добавление 7 функции, добавление Swagger
